--- a/logstash.config
+++ b/logstash.config
@@ -6,9 +6,9 @@ input {
 
 output {
   elasticsearch {
-    hosts => ["elasticsearch:9200"]
+    hosts => ["178.62.74.103:9200"]
     manage_template => false
     index => "%{[@metadata][beat]}-%{+YYYY.MM.dd}"
-    document_type => "%{[@metadata][type]}"    
+    document_type => "%{[@metadata][type]}"
   }
 }
