replace IP with Delphi IP

--- a/logstash.config
+++ b/logstash.config
@@ -6,7 +6,7 @@ input {
 
 output {
   elasticsearch {
-    hosts => ["178.62.74.103:9200"]
+    hosts => ["elasticsearch.cloud66.local:9200"]
     manage_template => false
     index => "%{[@metadata][beat]}-%{+YYYY.MM.dd}"
     document_type => "%{[@metadata][type]}"
