Fix logstash version and update logstash start command

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ logstash:
   image: logstash
   volumes:
     - .:/app
-  command: logstash agent -f /app/logstash.config
+  command: logstash -f /app/logstash.config
   links:
     - elasticsearch
   ports:
