log original to stdout

--- a/logstash.config
+++ b/logstash.config
@@ -5,6 +5,7 @@ input {
 }
 
 output {
+  stdout { }
   elasticsearch {
     hosts => ["elasticsearch.cloud66.local:9200"]
     manage_template => false
